facade/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: facade
  labels:
    app: facade
    app.kubernetes.io/name: facade
spec:
  selector:
    matchLabels:
      app: facade
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 0
      maxUnavailable: 1
  template:
    metadata:
      labels:
        app: facade
    spec:
      serviceAccountName: ckanserviceaccount
      containers:
        - name: facade
          image: europe-docker.pkg.dev/dft-rsss-findtransptdata-dev/dft-nap/facade:8bb12f4
          resources:
            limits:
               #memory: 512Mi
               #cpu: 750m
            requests:
               #memory: 128Mi
               #cpu: 500m
          ports:
           - name: facade-app
             containerPort: 3000
             protocol: TCP
          readinessProbe:
            tcpSocket:
              port: facade-app
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: facade-app
              httpHeaders:
              - name: Accept
                value: "*/*"
            initialDelaySeconds: 15
            periodSeconds: 15
        - name: cloudsql-proxy
          image: gcr.io/cloudsql-docker/gce-proxy:1.20.0
          resources:
            limits:
              memory: 100Mi
            requests:
              memory: 100Mi
          command: ["/cloud_sql_proxy",
                    "-instances=$(INSTANCE_CONNECTION)=tcp:5432",
                    "-credential_file=/secrets/cloudsql/key.json"]
          securityContext:
          #  runAsUser: 92  # non-root user
          #  allowPrivilegeEscalation: false
          # [END cloudsql_security_context]
          volumeMounts:
            - name: cloudsql-instance-credentials
              mountPath: /secrets/cloudsql
              readOnly: true
        # [END proxy_container]
      # [START volumes]    
      volumes:
        - name: facade-data
          persistentVolumeClaim:
            claimName: facade-pvc
        - name: cloudsql-instance-credentials
          csi:
            driver: secrets-store.csi.k8s.io
            readOnly: true
            volumeAttributes:
              secretProviderClass: "cloudsql-secrets"
